--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "bugs": {
     "url": "https://github.com/KnowRe/swint-akamai-purge/issues"
   },
+  "engines" : {
+    "node" : ">=4.0.0"
+  },
   "homepage": "https://github.com/KnowRe/swint-akamai-purge",
   "dependencies": {
     "akamai": "^0.9.0",
-    "swint-helper": "^0.1.7"
+    "swint-helper": "1.x"
   },
   "devDependencies": {
     "mocha": "*",
