--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "homepage": "https://github.com/KnowRe-Dev/swint-akamai-purge",
   "dependencies": {
-    "akamai": "^0.10.1",
-    "swint-helper": "1.x"
+    "akamai": "0.10.1",
+    "swint-helper": "1.2.2"
   },
   "devDependencies": {
-    "mocha": "^3.2.0",
-    "eslint": "^3.17.0"
+    "mocha": "3.2.0",
+    "eslint": "3.17.0"
   }
 }
